# ROS-Bare-Bones

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  run.sh
apps/: ros_barebones_nodelet.cpp
docker/: Dockerfile  docker_build.sh  docker_run.sh
docker/melodic/: Dockerfile
include/: colors.hpp  utils.hpp
launch/: ros_bare_bones.launch
rviz/: viewer.rviz
